# birds_detection

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
.run/: example_object_detection.run.xml
app/: dashboard.py  prepare_data.py
data_video/: labels_oiseaux.csv
src/analyse/: analyse.py
src/evaluate/: task.py
src/explore/: task.py
src/gather/: extract_data_from_video.py  task.py
src/predict/: 1_detect_objects.py  2_extract_objects.py  3_classify_objects.py  3_prepare_images.py  4_classify_birds.py  4_prepare_images.py  example_object_detection.py  task.py  utils_handle_images.py  utils_load_model.py
src/train/: task.py  train.py  training_config.py
src/utils/eda_tools/: pandas_profiling_csv.py
src/utils/images/: utils_handle_images.py  utils_load_and_save.py  utils_load_model.py
src/utils/lbc_azure_ml/: azure_connection.py  azure_mlflow.py
src/utils/lbc_data_generation/: data_generation_tabular.py
src/utils/lbc_data_validation/: tfdv_validation.py  validation_error.py
src/utils/ml_versioning_wrapper/: py_commit.py  synch_wrapper.py
src/utils/time/: convert_time.py  wrapper_timer.py
src/utils/time_series/: time_series_models_tf.py  time_series_plots.py  time_series_preprocessing.py  time_series_window_generator_tf.py  times_series_data_generation.py  times_series_preprocessor.py
src/validate/: example.py  task.py
