[tool.poetry]
name = "birds_project"
version = "0.1.0"
description = ""
authors = ["jjublanc <jjublanc@littlebigcode.fr>"]

[tool.poetry.dependencies]
python = ">=3.8.7,<3.9.7"
tensorflow = "^2.10.0"
Faker = "^15.1.1"
python-dotenv = "^0.21.0"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
git-python = "1.0.3"
mlflow = "^1.30.0"
tensorflow-hub = "^0.12.0"
object-detection = "^0.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
