[tool.poetry]
name = "birds_project"
version = "0.1.0"
description = ""
authors = ["jjublanc <jjublanc@littlebigcode.fr>"]

[tool.poetry.dependencies]
python = "3.9.1"
tensorflow = "2.11"
Faker = "^15.1.1"
python-dotenv = "^0.21.0"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
git-python = "1.0.3"
mlflow = "2.0.1"
tensorflow-hub = "^0.12.0"
object-detection = {path = "models/research"}
protobuf = "3.19"
streamlit = "^1.16.0"
streamlit-vis-timeline = "^0.2.0"
piexif = "^1.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
